--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,17 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.home{
+  background: color($colors, material-light);
+  color: color($colors, light);
+  margin-top: 30px;
+}
+
+.toolbar-title{
+  text-align: center;
+}
+
+.tabs-md tab-button-icon{
+  color: #ccc;
+}
